--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="20dp"
             android:id="@+id/linearLayout"
-            tools:layout_editor_absoluteY="311dp">
+            android:layout_marginTop="100dp" app:layout_constraintTop_toBottomOf="@+id/btnstart">
         <TextView
                 android:text="ПК"
                 android:layout_width="wrap_content"
@@ -192,7 +192,8 @@
             app:layout_constraintTop_toBottomOf="@+id/btnstart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:textSize="26sp" android:textColor="#FFAB00"
-            android:layout_marginTop="20dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
+            android:layout_marginTop="20dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
     <ImageView
             android:layout_width="185dp"
             android:layout_height="200dp" app:srcCompat="@drawable/_2cbjteeze0" android:id="@+id/img1"
